bynkc/tests/fixtures/positive/62_uses_chain/src/b/main.karn
commons b

uses a

type Mid = {
  root: Root,
}
