bynkc/tests/fixtures/negative/50_brace_and_dir/src/foo.karn
commons foo { type X = Int }
